Update changed variable name

--- a/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
+++ b/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
@@ -113,7 +113,7 @@
       <div class="ui segment">
         <div class="ui small divided items">
 
-          {% if "githubapp" in social_account_providers %}
+          {% if "githubapp" in socialaccount_providers %}
             <div class="item">
               <div class="content">
                 <div class="description">
@@ -162,7 +162,7 @@
             </div>
           </div>
 
-          {% if "github" in social_account_providers %}
+          {% if "github" in socialaccount_providers %}
             {# This doesn't cover GitHub App providers, the fix for GHA is different #}
             <div class="item">
               <div class="content">
