--- a/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
+++ b/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
@@ -170,9 +170,9 @@
               <div class="content">
                 <div class="description">
                   {% blocktrans trimmed %}
-                    If any of your GitHub organizations have not yet approved our GitHub application,
-                    repositories from the organization won't be in your repository list.
-                    In this case, you may need to request approval of our GitHub application from the organization.
+                    If your repository list does not include repositories from one of your GitHub organizations,
+                    our GitHub application may not be approved by the organization yet.
+                    In this case, you should try requesting approval of our GitHub application from the organization.
                   {% endblocktrans %}
                 </div>
                 <div class="extra">
