--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -242,9 +242,11 @@
               </td>
               <td class="command">
                 <code class="ui text"
-                      data-bind="text: command, class: command_class, click: toggle_expanded"></code>
+                      data-bind="text: command, class: !finished() && $parent.is_finished() ? 'red' : command_class, click: toggle_expanded"></code>
                 <a class="ui mini inverted label"
-                   data-bind="text: '{% trans "Running" %}', visible: !finished()"></a>
+                   data-bind="text: '{% trans "Running" %}', visible: !finished() && !$parent.is_finished()"></a>
+                <a class="ui mini inverted label"
+                   data-bind="text: '{% trans "Killed" %}', visible: !finished() && $parent.is_finished()"></a>
                 <a class="ui mini inverted label"
                    data-bind="text: run_time() + 's', visible: finished()"></a>
                 <a class="ui mini inverted label"
