Login: don't mention a date for github OAuth apps

--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -78,7 +78,7 @@
                           </i>
                         {% else %}
                           {% blocktrans trimmed %}
-                            For users that connected their GitHub accounts before June 24, 2025.
+                            For users that haven't switched their connected GitHub accounts to our new GitHub App.
                           {% endblocktrans %}
                         {% endif %}
                       {% elif provider.id == "githubapp" %}
