Fix img alt, use Field.label instead

--- a/readthedocsext/theme/templates/semantic-ui/layout/field_file.html
+++ b/readthedocsext/theme/templates/semantic-ui/layout/field_file.html
@@ -44,7 +44,7 @@
         <div class="ui basic center aligned segment">
           <img class="ui small bordered centered image"
                src="{{ field.value.url }}"
-               alt="{{ organization.name }} avatar" />
+               alt="{{ field.label }}" />
           <span>{{ field.value.width }}x{{ field.value.height }}px</span>
         </div>
       {% else %}
