Fix bug with project create search result selection
This class had some display issues but is also used by the FUI search
module JS on search results selection.

--- a/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
+++ b/readthedocsext/theme/templates/projects/partials/project_create_automatic.html
@@ -52,7 +52,7 @@
       {% endcomment %}
       <script type="text/html" id="remote-repo-results">
 {# fmt:off #}
-<div data-bind="foreach: remote_repos">
+<div data-bind="foreach: remote_repos" class="results">
   <a class="result">
     <div class="image">
       <img data-bind="attr: {src: avatar_url}">
