Add crispy template for rich choice select field widget
This adds a field display type for complex dropdown choices and will be
used by the project create team and organization selection field.

- Refs #468
- Requires readthedocs/readthedocs.org#12524

--- a/readthedocsext/theme/templates/semantic-ui/field.html
+++ b/readthedocsext/theme/templates/semantic-ui/field.html
@@ -1,8 +1,14 @@
-{% load crispy_forms_field %}
+{% load is_checkbox from crispy_forms_field %}
 
 {% if field.is_hidden %}
   {{ field }}
 {% else %}
+  {% comment %}
+    Checkbox fields are rendered without the base field template because we
+    don't want the same label structure as normal input fields on checkboxes.
+    The labels are not over the checkbox, they are to the right side of the
+    checkbox
+  {% endcomment %}
   {% if field|is_checkbox %}
     {% include "semantic-ui/fields/checkbox.html" with field=field %}
   {% else %}
