--- a/readthedocsext/theme/templates/projects/traffic_analytics.html
+++ b/readthedocsext/theme/templates/projects/traffic_analytics.html
@@ -23,19 +23,21 @@
   {% if not enabled %}
     {% include "organizations/includes/feature_disabled.html" with project=project plan="Advanced" %}
   {% endif %}
+
   <div class="{% if not enabled %}ui basic fitted disabled segment{% endif %}"
        data-bind="using: ProjectTrafficAnalyticsView()">
 
     {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_200 %}
 
-    <h3 class="ui small header">
-      {% trans "Overview" %}
-      <div class="sub header">{% trans "For the last month" %}</div>
-    </h3>
+    {% if top_pages_200 %}
+      <h3 class="ui small header">
+        {% trans "Overview" %}
+        <div class="sub header">{% trans "For the last month" %}</div>
+      </h3>
 
-    <div class="ui loading segment" data-bind="css: {loading: is_loading()}">
-      <canvas width="400" height="150" data-bind="chart: config"></canvas>
-      <script type="application/json" data-bind="jsonInit: config">
+      <div class="ui loading segment" data-bind="css: {loading: is_loading()}">
+        <canvas width="400" height="150" data-bind="chart: config"></canvas>
+        <script type="application/json" data-bind="jsonInit: config">
         {
           "type": "line",
           "data": {
@@ -62,19 +64,21 @@
             }
           }
         }
-      </script>
-    </div>
+        </script>
+      </div>
 
-    <h3 class="ui small header">
-      {% trans "Not found pages (404)" %}
-      <div class="sub header">{% trans "For the last month" %}</div>
-    </h3>
-    {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_404 %}
+      <h3 class="ui small header">
+        {% trans "Not found pages (404)" %}
+        <div class="sub header">{% trans "For the last month" %}</div>
+      </h3>
+      {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_404 %}
+    {% endif %}
 
   </div>
 {% endblock project_edit_content %}
 
 {% block project_edit_sidebar_help_topics %}
-  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/analytics.html" text="How to use traffic analytics" is_external=True class="item" %}
+  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/traffic-analytics.html" text="How to use traffic analytics" is_external=True class="item" %}
+  {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/addons.html" text="Learn about Read the Docs Addons" is_external=True class="item" %}
   {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/technical-docs-seo-guide.html" text="How to do search engine optimization (SEO) for documentation projects" is_external=True class="item" %}
 {% endblock project_edit_sidebar_help_topics %}
