--- a/readthedocsext/theme/templates/projects/traffic_analytics.html
+++ b/readthedocsext/theme/templates/projects/traffic_analytics.html
@@ -26,16 +26,17 @@
   <div class="{% if not enabled %}ui basic fitted disabled segment{% endif %}"
        data-bind="using: ProjectTrafficAnalyticsView()">
 
-    {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_200 %}
+    {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_200 show_addons_link=True %}
 
-    <h3 class="ui small header">
-      {% trans "Overview" %}
-      <div class="sub header">{% trans "For the last month" %}</div>
-    </h3>
+    {% if top_pages_200 %}
+      <h3 class="ui small header">
+        {% trans "Overview" %}
+        <div class="sub header">{% trans "For the last month" %}</div>
+      </h3>
 
-    <div class="ui loading segment" data-bind="css: {loading: is_loading()}">
-      <canvas width="400" height="150" data-bind="chart: config"></canvas>
-      <script type="application/json" data-bind="jsonInit: config">
+      <div class="ui loading segment" data-bind="css: {loading: is_loading()}">
+        <canvas width="400" height="150" data-bind="chart: config"></canvas>
+        <script type="application/json" data-bind="jsonInit: config">
         {
           "type": "line",
           "data": {
@@ -62,14 +63,15 @@
             }
           }
         }
-      </script>
-    </div>
+        </script>
+      </div>
 
-    <h3 class="ui small header">
-      {% trans "Not found pages (404)" %}
-      <div class="sub header">{% trans "For the last month" %}</div>
-    </h3>
-    {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_404 %}
+      <h3 class="ui small header">
+        {% trans "Not found pages (404)" %}
+        <div class="sub header">{% trans "For the last month" %}</div>
+      </h3>
+      {% include "projects/partials/edit/traffic_list.html" with objects=top_pages_404 %}
+    {% endif %}
 
   </div>
 {% endblock project_edit_content %}
