Update copy for notification
Refs https://github.com/readthedocs/readthedocs.org/pull/12547

--- a/readthedocsext/theme/templates/projects/partials/announcements/github-app.html
+++ b/readthedocsext/theme/templates/projects/partials/announcements/github-app.html
@@ -10,7 +10,7 @@
         <div class="description">
           {% blocktrans trimmed %}
             We're excited to announce our GitHub App -- allowing more granular permissions and additional functionality around pull request builds.
-            You can start using the new GitHub App today on our Community site in beta. We plan to start testing with our Business users soon.
+            You can now use the new GitHub App on both our Community and Business sites.
           {% endblocktrans %}
           <div class="ui extra content">
             <a class="ui small primary fluid basic button"
